--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ ul {
 
 /* utility */
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 10px;
@@ -35,8 +35,16 @@ ul {
 }
 
 .bt-piccolo-blu {
-  background-color: dodgerblue;
+  background-color: #0261fe;
   width: 60px;
+  height: 30px;
+  font-size: 0.8rem;
+  border: none;
+  color: white;
+}
+.bt-grande-blu {
+  background-color: #0261fe;
+  width: 180px;
   height: 30px;
   font-size: 0.8rem;
   border: none;
@@ -54,6 +62,7 @@ header {
   justify-content: space-between;
   align-items: center;
   color: black;
+  margin-bottom: 30px;
 }
 
 .logo-link {
@@ -72,6 +81,7 @@ header {
 header li > a {
   color: black;
   text-decoration: none;
+  font-size: 0.8rem;
 }
 
 .logo-link img {
@@ -86,4 +96,45 @@ header li > a {
 .link-bottone li {
   display: inline;
   padding-right: 20px;
+}
+/* fine header */
+
+/* inizio main */
+
+main .container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  min-height: max-content;
+}
+main .background-azzurro {
+  background-color: #b4d0e7;
+}
+
+.top-main {
+  display: flex;
+  justify-content: center;
+  min-height: fit-content;
+}
+
+.lista-main-azzurro {
+  padding-top: 80px;
+  max-width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.immagine-main-azzurro {
+  padding-top: 80px;
+  max-width: 65%;
+  text-align: left;
+  display: flex;
+  padding-right: 40px;
+}
+.immagine-main-azzurro img {
+  max-width: 75%;
+}
+.top-main p {
+  max-width: calc(33%);
+  padding-bottom: 30px;
 }
