--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ main .background-azzurro {
 
 /* seconda parte main */
 
-.business .container {
+.business > .container {
   margin-top: 50px;
 }
 .business p {
@@ -189,5 +189,25 @@ main .background-azzurro {
   height: 20px;
   background-color: white;
   margin-right: 10px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 2rem;
+  margin-left: -1, 5rem;
+  margin-right: -1, 5rem;
+}
+
+.col-1-1 {
+  padding-left: 1, 5rem;
+  padding-right: 1, 5rem;
+  width: calc(100%);
+}
+
+.col-1-3 {
+  padding-left: 1, 5rem;
+  padding-right: 1, 5rem;
+  width: calc(100% / 3);
 }
 /* fine seconda parte main */
