--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ h1 {
   margin-right: -1, 5rem;
 }
 
+/* colonne */
+
 [class="col"] {
   padding-left: 1, 5rem;
   padding-right: 1, 5rem;
@@ -80,16 +82,19 @@ h1 {
 }
 
 .col-1-3 {
-  width: calc(100% / 3);
+  min-width: calc(100% / 3);
+  padding-left: 10px;
+  padding-right: 10px;
 }
+
+/* fine colonne */
 
 /* header */
 
 header {
-  max-width: 1300px;
   min-height: 50px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -99,7 +104,6 @@ header {
 
 .logo-link {
   max-width: calc(100% / 2);
-  flex: 1 0 0;
 }
 .logo-link ul {
   display: flex;
@@ -144,7 +148,7 @@ header li > a {
   top: 100px;
 }
 
-#jumbo .container .row .col-30 {
+#jumbo .col-30 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -157,14 +161,28 @@ header li > a {
 
 .business > .container {
   margin-top: 200px;
+  max-height: fit-content;
 }
 .business p {
-  max-width: 100%;
   display: inline;
   padding-right: 20px;
 }
 .business h2 {
   padding-bottom: 30px;
+}
+
+.business .col-1-1 {
+  text-align: center;
+  min-height: 40px;
+}
+.business .col-1-3 h3 {
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.business ul li {
+  padding-top: 20px;
+  padding-left: 20px;
 }
 .flag-blu {
   display: inline-block;
