--- a/css-prova.css
+++ b/css-prova.css
@@ -89,7 +89,7 @@ h1 {
   width: calc(100%);
 }
 
-.col-1-3 {
+.col-30 {
   width: calc(100% / 3);
 }
 
@@ -167,6 +167,21 @@ header li > a {
 
 .business {
   margin-top: 200px;
+}
+
+.business .row {
+  justify-content: space-between;
+}
+
+.costs > ul {
+  padding-bottom: 40px;
+}
+.costs > ul > li {
+  padding-bottom: 20px;
+}
+
+.card > p {
+  padding: 20px 0;
 }
 
 .flag-blu {
