--- a/css-prova.css
+++ b/css-prova.css
@@ -15,21 +15,13 @@ ul {
 
 .debug * {
   min-height: 100px;
-
+  padding: 5px;
   background-color: rgb(255, 9, 9);
   border: 2px rgb(22, 1, 140);
 }
 
 .border {
   border: 2px dashed black;
-}
-
-h2 {
-  padding-bottom: 20px;
-}
-h2 > div {
-  padding-bottom: 20px;
-  padding-left: 20px;
 }
 /* /setup generali */
 
@@ -62,6 +54,21 @@ h1 {
   font-size: 4.2rem;
 }
 
+.top-list {
+  border: 1px gray solid;
+  padding-top: 10px;
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  display: block;
+}
+
+.inline {
+  display: inline;
+}
+
+/* colonne */
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -69,8 +76,6 @@ h1 {
   margin-left: -1.5rem;
   margin-right: -1.5rem;
 }
-
-/* colonne */
 
 [class*="col"] {
   padding-left: 1.5rem;
@@ -89,7 +94,7 @@ h1 {
   width: calc(100%);
 }
 
-.col-30 {
+.col-1-3 {
   width: calc(100% / 3);
 }
 
@@ -149,7 +154,6 @@ header li > a {
 }
 
 #jumbo .container {
-  max-width: 1300px;
   position: relative;
   top: 100px;
 }
@@ -165,25 +169,21 @@ header li > a {
 
 /* business */
 
-.business {
+.business > .container {
   margin-top: 200px;
+  margin-bottom: 200px;
+}
+.business h2 {
+  padding-bottom: 30px;
 }
 
-.business .row {
-  justify-content: space-between;
+.business .col-1-3 h3 {
+  padding-top: 20px;
 }
 
-.costs > ul {
-  padding-bottom: 40px;
+.business ul li {
+  padding-top: 20px;
 }
-.costs > ul > li {
-  padding-bottom: 20px;
-}
-
-.card > p {
-  padding: 20px 0;
-}
-
 .flag-blu {
   display: inline-block;
   border: 5px solid blue;
@@ -203,4 +203,14 @@ header li > a {
   margin-right: 10px;
 }
 
+.bottom-business {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
 /* fine business */
+
+/* inizio find a partner
+
+/* fine find a partner*/
