fine product explanation

--- a/style.css
+++ b/style.css
@@ -246,3 +246,11 @@ header li > a {
 }
 
 /* fine find a partner*/
+
+/* <!-- inizio product explanation --> */
+
+.product-explanation {
+  margin-bottom: 200px;
+}
+
+/* <!-- fine product explanation --> */
