--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ h1 {
   width: 30%;
 }
 
+.col-20 {
+  width: 20%;
+}
+
 .col-70 {
   width: 70%;
 }
@@ -293,9 +297,7 @@ footer {
   padding-bottom: 20px;
 }
 
-.language-selector {
-  padding-top: 40px;
-  margin-left: 70px;
+.footer-bottom .col-20 {
+  text-align: center;
   border-top: 1px solid white;
-  max-width: 100px;
 }
