--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ ul {
   display: inline;
 }
 
+.light-gray {
+  color: lightgray;
+}
+
 /* colonne */
 
 .row {
@@ -219,7 +223,8 @@ header li > a {
   font-size: 2.4rem;
 }
 
-.business .fa-solid {
+.business .fa-check {
+  color: #74c0fc;
   font-size: 1rem;
   padding-right: 0.5rem;
 }
@@ -227,7 +232,7 @@ header li > a {
   padding-bottom: 50px;
 }
 .card {
-  min-height: 750px;
+  min-height: 950px;
 }
 
 .business .col-1-3 h3 {
@@ -264,6 +269,18 @@ header li > a {
 
 .card-bottom {
   margin-top: 50px;
+}
+
+.card-bottom .bt-grande-blu {
+  margin-right: 2rem;
+}
+
+.bottom-business h3 {
+  margin-left: 2rem;
+}
+.card-bottom p {
+  display: block;
+  margin-left: 2rem;
 }
 
 .bottom-business {
